examples/errors/modules/helper.bkf
-- Helper module for showing the other errors
module exporting (aa, bb)

alias cc = "c"
alias aa = {"a", cc, "a"}
alias bb = [aa]
